welcome.lessons.welcome.array.array123.Array123.scala.error
array123:-6: error: Missing closing brace `}' assumed here
try {
^array123:1: error: expected class or object definition
def array123(nums:Array[Int]): Boolean = {
^